--- a/Proj/MauiMvvmTest/MauiMvvmTest/AppShell.xaml
+++ b/Proj/MauiMvvmTest/MauiMvvmTest/AppShell.xaml
@@ -3,7 +3,8 @@
     x:Class="MauiMvvmTest.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MauiMvvmTest"  
+    xmlns:local="clr-namespace:MauiMvvmTest"
+    xmlns:view="clr-namespace:MauiMvvmTest.Pages"
     Shell.FlyoutBehavior="Flyout">
     
 
@@ -12,9 +13,15 @@
             ContentTemplate="{DataTemplate local:MainPage}"
             Route="MainPage" />
         <ShellContent
-            Title="New Page for Me"
-            ContentTemplate="{DataTemplate local:NewPage1}"
-            Route="NewPage" />
-    </Shell>
+            Title="Page 1"
+            ContentTemplate="{DataTemplate view:Page1}"
+            Route="Page1" />
+
+        <ShellContent
+		    Title="Page 2"
+		    ContentTemplate="{DataTemplate view:Page2}"
+		    Route="Page22" />
+
+</Shell>
 
 
