--- a/Proj/MauiTableViewExample/MauiTableViewExample/Pages/SettingsPage.xaml
+++ b/Proj/MauiTableViewExample/MauiTableViewExample/Pages/SettingsPage.xaml
@@ -7,14 +7,19 @@
              x:DataType="viewmodel:SettingsViewModel"
              Title="SettingsPage">
     <ContentPage.Content>
-        <VerticalStackLayout>
+        <VerticalStackLayout Margin="10, 0, 0, 0">
             <Button Text="AddTableViewItem" Command="{Binding Add_TableView_ItemCommand}" HorizontalOptions="Start" Margin="0, 10, 0, 0"/>
             <HorizontalStackLayout>
                 <Label Text="Selected Item is: " HorizontalOptions="Start" VerticalOptions="Center"/>
                 <Entry Text="{Binding ActItem}" IsReadOnly="True" FontAttributes="Bold" BackgroundColor="AliceBlue" TextColor="CornflowerBlue"/>
             </HorizontalStackLayout>
-            <TableView  BackgroundColor="Transparent" x:Name="TableViewAccounts">
-            </TableView>
+            <Label Text="Click on Cell moves it to the top and selects, with toggleSwitch activated the cell is deleted" Margin="0, 30, 0, 0" FontAttributes="Bold" HorizontalOptions="Start" VerticalOptions="Center"/>
+            <ScrollView>
+                <Grid  HeightRequest="600">
+                    <TableView  BackgroundColor="Transparent" x:Name="TableViewAccounts">
+                    </TableView>
+                </Grid>
+            </ScrollView>
         </VerticalStackLayout>
     </ContentPage.Content>
 </ContentPage>
